Set up of the Search model: distance method, locals   - Add custom distance method to Search Form model   - Fix the en locals for Search Model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,8 @@ en:
     attributes:
       searchForm:
         location: "Starting point"
+        beverage: "Beverage of choice"
+        distance: "Distance"
     errors:
       models:
         searchForm:
