--- a/README.rdoc
+++ b/README.rdoc
@@ -1,31 +1,49 @@
-== README {<img src="https://travis-ci.org/DBC-Huskies/flight-app.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/DBC-Huskies/flight-app]
+== SipTrip {<img src="https://travis-ci.org/DBC-Huskies/flight-app.svg?branch=master" alt="Build Status" />}[https://travis-ci.org/DBC-Huskies/flight-app]
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+With a back-end built on Ruby on Rails and using PostgreSQL, SipTrip is a web app for curating "flights" of local businesses centered around a user's beverage preference. With jQuery and AJAX the interface and flight results are updated in a single page. Use of the Geocoder and BCrypts gems and Google Maps and Places APIs makes for a technically robust user experience in mapping out their adventure.
 
-Things you may want to cover:
+The first production MVP of SipTrip was completed in one week.
 
-* Ruby version
+## Team
 
-* System dependencies
+[Anya Krupp](www.github.com/cherchezlafemme)
+[Andrew Peterson](www.github.com/ajpeterson)
+[Jacob Rapp](https://github.com/J-Rapp)
 
-* Configuration
+## Deployment
 
-* Database creation
+SipTrip is deployed on Heroku
 
-* Database initialization
+* [Production](https://sip-trip.herokuapp.com)
 
-* How to run the test suite
+## Tech specs
 
-* Services (job queues, cache servers, search engines, etc.)
+* Ruby on Rails
+* PostgreSQL
+* RSpec
+* SimpleCov
+* JavaScript (jQuery, AJAX)
+* SASS
+* Continuous integration with Travis CI
+* Bcrypt gem for user authentication
+* Geocoder gem for generating coordinates
+* Google Maps and Places APIs
 
-* Deployment instructions
+## Git Workflow
 
-* Team
+0. Working on your local feature branch and ready to push
+1. $ git fetch origin test-master
+2. $ git merge origin/test-master
+3. Resolve any conflicts
+4. Test the application locally
+5. $ git push origin feature-branch
+6. Create a pull request on github
+7. Wait for another member of the team to merge pull request
 
-Things this readme should include:
+## Development Environment
 
-Ruby on Rails (versions)
-Gems/Dependencies
-Test coverage (RSpec, SimpleCov)
-Continuous integration with Travis CI
+Remember to create your .env file locally otherwise you will not be able to access Google APIs.
+
+* Create a .env file in the root of the project
+* Add the line MAP_KEY=your-google-api-key
+
